--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,8 @@ crashlytics-build.properties
 # Temporary auto-generated Android Assets
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
+Kasperrougleike/Assets/LOL.unity
+Kasperrougleike/Assets/PlayerStat.cs
+Kasperrougleike/Assets/PlayerStat.cs.meta
+Kasperrougleike/Assets/Shooting.cs
+Kasperrougleike/Assets/Shooting.cs.meta
